--- a/src/warehouse_manage/config/abb_irb4600_60_205.yaml
+++ b/src/warehouse_manage/config/abb_irb4600_60_205.yaml
@@ -1,22 +1,17 @@
-/**/controller_manager:
+controller_manager:
   ros__parameters:
     update_rate: 100
     use_sim_time: true
 
-    arm_controller:
+    joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
 
-/**/arm_controller:
+joint_trajectory_controller:
   ros__parameters:
-    command_interfaces:
-      - position
-    state_interfaces:
-      - position
-      - velocity
     joints:
       - joint_1
       - joint_2
@@ -24,3 +19,18 @@
       - joint_4
       - joint_5
       - joint_6
+    command_interfaces:
+      - position
+    state_interfaces:
+      - position
+      - velocity
+    
+    state_publish_rate: 200.0 # Defaults to 50
+    action_monitor_rate: 20.0 # Defaults to 20
+
+    allow_partial_joints_goal: false # Defaults to false
+    open_loop_control: false
+    allow_integration_in_goal_trajectories: true
+    constraints:
+      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
+      goal_time: 0.0 # Defaults to 0.0 (start immediately)
