system update backup

--- a/src/abb_irb4600_60_205_moveit_config/config/ros2_controllers.yaml
+++ b/src/abb_irb4600_60_205_moveit_config/config/ros2_controllers.yaml
@@ -3,14 +3,14 @@ controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
 
-    arm_controller:
+    joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-arm_controller:
+joint_trajectory_controller:
   ros__parameters:
     joints:
       - joint_1
@@ -24,4 +24,3 @@ arm_controller:
     state_interfaces:
       - position
       - velocity
-    allow_nonzero_velocity_at_trajectory_end: true
