--- a/src/abb_irb4600_60_205_moveit_config/config/joint_limits.yaml
+++ b/src/abb_irb4600_60_205_moveit_config/config/joint_limits.yaml
@@ -10,31 +10,31 @@ default_acceleration_scaling_factor: 0.1
 joint_limits:
   joint_1:
     has_velocity_limits: true
-    max_velocity: 3.0539999999999998
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
   joint_2:
     has_velocity_limits: true
-    max_velocity: 3.0539999999999998
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
   joint_3:
     has_velocity_limits: true
-    max_velocity: 3.0539999999999998
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
   joint_4:
     has_velocity_limits: true
-    max_velocity: 4.3630000000000004
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
   joint_5:
     has_velocity_limits: true
-    max_velocity: 4.3630000000000004
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
   joint_6:
     has_velocity_limits: true
-    max_velocity: 6.2830000000000004
+    max_velocity: 30.0
     has_acceleration_limits: true
     max_acceleration: 1.0
