--- a/src/abb_irb4600_60_205_moveit_config/package.xml
+++ b/src/abb_irb4600_60_205_moveit_config/package.xml
@@ -6,15 +6,15 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the abb_irb4600_60_205 with the MoveIt Motion Planning Framework
   </description>
-  <maintainer email="jingyunyang921@gmail.com">Yang Jingyun</maintainer>
+  <maintainer email="jingyunyang921@gmail.com">yjy</maintainer>
 
-  <license>BSD</license>
+  <license>BSD-3-Clause</license>
 
   <url type="website">http://moveit.ros.org/</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
-  <url type="repository">https://github.com/ros-planning/moveit2</url>
+  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
+  <url type="repository">https://github.com/moveit/moveit2</url>
 
-  <author email="jingyunyang921@gmail.com">Yang Jingyun</author>
+  <author email="jingyunyang921@gmail.com">yjy</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
