--- a/src/warehouse_manage/models/abb_irb4600_60_205/model.config
+++ b/src/warehouse_manage/models/abb_irb4600_60_205/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <model>
 
-  <name>conveyor_belt</name>
+  <name>abb_irb4600_60_205</name>
   <version>1.0</version>
   <sdf version='1.8'>model.urdf</sdf>
 
